--- a/www/css/index.css
+++ b/www/css/index.css
@@ -4,6 +4,7 @@ div.container-fluid div.row h1 {
     margin-bottom: 20px;
 }
 
+
 div.content.container-fluid div.row div.content img {
     width: 100%;
     max-width: 800px;
@@ -11,23 +12,22 @@ div.content.container-fluid div.row div.content img {
 
 div.content.container-fluid div.row div.content img#children_logo {
     width: 100%;
-    max-width: 200px;
+    max-width: 100px;
 }
 
-div.content-left{
+div.content-left {
     line-height: 1.3;
 }
-
 
 div.content.container-fluid div.row div.content p {
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 12pt;
+    font-size: 14pt;
     text-align: left;
     width: 100%;
 }
 
-div.content.container-fluid div.row div.content  {
+div.content.container-fluid div.row div.content {
     text-align: center;
 }
 
@@ -62,7 +62,6 @@ div.content.container-fluid div.row div.content  {
     width: 100%;
     border: 0;
 }
-
 
 .rslides {
     position: relative;
@@ -111,33 +110,41 @@ div.content.container-fluid div.row div.content  {
 }
 
 .rslides_tabs .rslides_here a {
-    background: rgba(255,255,255,.1);
+    background: rgba(255, 255, 255, .1);
     color: black;
     font-weight: bold;
 }
 
-.img_slider{
+.img_slider {
     margin-top: 10px;
     max-width: 800px;
     max-height: 500px;
 }
 
-div.content.container-fluid div.row div.content ul{
-    font-size: 12pt;
+div.content.container-fluid div.row div.content ul {
+    font-size: 14pt;
     text-align: left;
     line-height: 1.3;
     width: 100%;
     margin-top: 5px;
 }
 
-div.content.container-fluid div.row div.content ul li{
+div.content.container-fluid div.row div.content ul li {
     margin-top: 10px;
 }
 
-div.content.container-fluid div.row div.content ul.list{
-    list-style-type:circle;
+div.content.container-fluid div.row div.content ul.list {
+    list-style-type: circle;
 }
 
-div.content.container-fluid div.row div.content ul.sublist{
-    list-style-type:circle;
+div.content.container-fluid div.row div.content ul.sublist {
+    list-style-type: circle;
+}
+
+.btn-block + .btn-block {
+    margin-top: 10px;
+}
+
+h4.byliner {
+    font-size: 12pt;
 }
