--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -7,6 +7,9 @@
     <feature name="VideoPlayer">
         <param name="android-package" value="com.phonegap.plugins.videoplayer.VideoPlayer" />
     </feature>
+    <feature name="Device">
+        <param name="android-package" value="org.apache.cordova.device.Device" />
+    </feature>
     <name>HelloCordova</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
